Finished fixing up the layout bugs with contact section, removed all in-line styling

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -226,6 +226,10 @@ a:focus {
     -moz-animation-timing-function: linear;
 }
 
+.underlined-title {
+    text-decoration: underline;
+}
+
 @-webkit-keyframes pulse {    
     0% {
         -webkit-transform: scale(1);
@@ -292,6 +296,14 @@ a:focus {
     width: 100%;
     height: 200px;
     margin-top: 100px;
+}
+
+#contact {
+    padding-bottom: 20%;
+}
+
+.contact-link {
+    margin: 2%;
 }
 
 @media(min-width:767px) {
